fixed landscape issue on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -137,14 +137,18 @@ nav {
 .hero {
   min-width: 100%;
   background: url('../img/foxface.png') no-repeat local center top 30px #E74C3C;
-  background-size: 55%;
+  background-size: 170px 170px;
   min-height: 100%; }
-  @media screen and (min-width: 480px) {
+  @media screen and (max-height: 375px) {
+    .hero {
+      background-position: center top 10px;
+      background-size: 120px 120px; } }
+  @media screen and (min-width: 768px) {
     .hero {
       background-color: #DDDDDB;
       background: url('../img/littlefox3.jpg') no-repeat local center bottom 50px #E74C3C;
       background-size: 700px 427px; } }
-  @media screen and (min-width: 1140px) {
+  @media screen and (min-width: 1200px) {
     .hero {
       background: url('../img/fox4.jpg') no-repeat scroll right -150px top -150px;
       background-color: #DDDDDB; } }
@@ -156,7 +160,7 @@ nav {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto; }
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 768px) {
     .header {
       padding-top: 220px; } }
   .header::after {
@@ -173,7 +177,7 @@ nav {
     cursor: pointer;
     -webkit-transition: all 0.2s ease-out;
             transition: all 0.2s ease-out; }
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: 1200px) {
       .header button:hover {
         color: #E74C3C;
         border: 1px solid #E74C3C; } }
