--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,13 +1,17 @@
 .hero {
     min-width: 100%;
     background: url('../img/foxface.png') no-repeat local center top 30px $red;
-    background-size: 55%;
-    @include media(480px) {
+    background-size: 170px 170px;
+    @media screen and (max-height: 375px) {
+        background-position: center top 10px;
+        background-size: 120px 120px
+    }
+    @include media(768px) {
         background-color: $white;
         background: url('../img/littlefox3.jpg') no-repeat local center bottom 50px $red;
         background-size: 700px 427px;
     }
-    @include media(1140px) {
+    @include media(1200px) {
         background: url('../img/fox4.jpg') no-repeat scroll right -150px top -150px ;
         background-color: $white;
     }
@@ -17,7 +21,7 @@
     height: 100%;
     text-align: center;
     padding-top: 200px;
-    @include media(480px) {
+    @include media(768px) {
         padding-top: 220px;
     }
     @include outer-container;
@@ -35,7 +39,7 @@
         padding: 5px 10px;
         cursor: pointer;
         transition: all 0.2s ease-out;
-        @include media(1140px) {
+        @include media(1200px) {
             &:hover {
                 color: $red;
                 border: 1px solid $red;
